# agent-skills-mcp-server

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
community-skills/: README.md
docs/: oauth-architecture.md
scripts/: __init__.py  check.py  fix.py  test.py
skills/example-skill/: SKILL.md
skills/skill-builder/: SKILL.md
skills/weather-forecast/: SKILL.md
src/agent_skills_mcp/: __init__.py  config.py  llm_client.py  models.py  server.py  skills_manager.py  tools.py  utils.py  vector_store.py
src/agent_skills_mcp/auth/: __init__.py  bearer_token_auth.py  google_token_verifier.py  opaque_token_verifier.py
tests/: conftest.py  test_config_oauth.py  test_opaque_token_verifier.py  test_performance.py  test_skills_manager_semantic.py  test_vector_store.py
tests/unit/: test_bearer_token_auth.py  test_config_llm.py  test_tools.py  test_tools_security.py
